--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Example</title>
+	<meta http-equiv="refresh" content="2; URL=https://github.com/Seba-san/test" />
     </head>
     <body>
         <p>This is an example of a simple HTML page with one paragraph.</p>
